Fix second onglet scales non visible

--- a/css/anr.css
+++ b/css/anr.css
@@ -983,6 +983,7 @@ md-select-menu md-content
 .treeview2.instances p:hover{
     color: #388E3C;
 }
-#anrMainTab > md-tabs-wrapper [aria-controls="tab-content-3"]{
+#anrMainTab > md-tabs-wrapper md-tab-item:nth-child(2){
     display: none !important;
+}
 }
